--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ buildscript {
 		classpath 'com.android.tools.build:gradle:2.1.0-beta3'
 	}
 }
+
 apply plugin: 'com.android.application'
 
 android {
@@ -31,4 +32,14 @@ android {
 dependencies {
 	compile fileTree(dir: 'libs', include: ['*.jar'])
 	compile 'com.android.support:appcompat-v7:23.3.0'
+	compile 'com.android.support:support-v4:23.3.0'
+	compile 'com.android.support:cardview-v7:23.3.0'
+	compile 'com.android.support:design:23.3.0'
+	compile 'cz.kinst.jakub:viewmodelbinding:0.8.1'
+	compile 'com.squareup.retrofit2:retrofit:2.0.0'
+	compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
+	compile 'io.reactivex:rxandroid:1.1.0'
+	compile 'io.reactivex:rxjava:1.1.0'
+	compile 'com.squareup.retrofit2:converter-gson:2.0.0'
+	compile 'cz.helmisek:evtalibrary:1.0.0'
 }
